[CSS] Fix some warning w/ missing color and gray function

--- a/client/styles/colors.css
+++ b/client/styles/colors.css
@@ -6,13 +6,13 @@
 
     --black: #0f0f0f;
 
-    --gray-darkest: gray(15%);
-    --gray-darker: gray(35%);
-    --gray-dark: gray(50%);
-    --gray: gray(70%);
-    --gray-light: gray(80%);
-    --gray-lighter: gray(90%);
-    --gray-lightest: gray(97%);
+    --gray-darkest: color(black lightness(15%));
+    --gray-darker: color(black lightness(35%));
+    --gray-dark: color(black lightness(50%));
+    --gray: color(black lightness(70%));
+    --gray-light: color(black lightness(80%));
+    --gray-lighter: color(black lightness(90%));
+    --gray-lightest: color(black lightness(97%));
 
     --quick-obs: #4caf50;
     --avalanche-obs: #03a9f4;
